--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Hurby Browser Console</title>
-    <link rel="stylesheet" href='/static/style.css' />
-</head>
-<body>
-    <h1>Hello world</h1>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+    <div class="col-1">
+        <h2>Home</h2>
+    </div>
+{% endblock %}
