--- a/webapp/templates/charlist.html
+++ b/webapp/templates/charlist.html
@@ -1,22 +1,26 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Characters</h1>
+<h2>Characters</h2>
 
 {% if hasChars %}
-{% for c in characters %}
-<div class="col-1">
-    <div class="character">
-        <div>
-            <h3>UUID: {{c.uuid}}</h3>
+<div class="char-container">
+    <div>
+        <h3>Online Characters ({{range}}/{{all}})</h3>
+        {% for c in characters %}
+        <div class="character {% if c.is_supporter %}supporter{% endif %}">
+            <a href="/characters/view/{{c.uuid}}">
+                <span><strong>TwitchID:</strong> {{c.twitchid}}</span>
+            </a>
+            <div>
+                <button>Blacklist</button>
+                <button>Timeout (10 sec)</button>
+                <button>Add 5000 cookies</button>
+            </div>
         </div>
-        <div>
-            <p><strong>TwitchID:</strong> {{c.twitchid}}</p>
-            <p><strong>Cookies:</strong> {{c.credits}}</p>
-        </div>
+        {% endfor %}
     </div>
 </div>
-{% endfor %}
 {% else %}
 <div class="col-1">
     <p>No characters available</p>
