--- a/webapp/templates/main-nav.html
+++ b/webapp/templates/main-nav.html
@@ -5,7 +5,7 @@
             <li><p>|</p></li>
             <li><a>Report a Bug</a></li>
             <li><p>|</p></li>
-            <li><a href="/characters" title="Admin tools">Admin Tools</a></li>
+            <li><a href="/characters" title="Character List">Character List</a></li>
             <li><p>|</p></li>
             <li><a>Stream overview</a></li>
         </ul>
