#6 cleanded main navigation

--- a/webapp/templates/main-nav.html
+++ b/webapp/templates/main-nav.html
@@ -3,11 +3,9 @@
         <ul>
             <li><a href="/" title="Start page">Start</a></li>
             <li><p>|</p></li>
-            <li><a>Report a Bug</a></li>
-            <li><p>|</p></li>
             <li><a href="/characters" title="Character List">Character List</a></li>
             <li><p>|</p></li>
-            <li><a>Stream overview</a></li>
+            <li><a>Blacklist</a></li>
         </ul>
     </nav>
     <nav class="text-right">
