#6 added jinja2 to footer

--- a/webapp/templates/footer.html
+++ b/webapp/templates/footer.html
@@ -7,6 +7,6 @@
         </nav>
     </div>
     <div class="text-right">
-        <small>powered by Flask | Developed by Z-Ray Entertainment and distributed under GNU GPL 3.0+</small>
+        <small>powered by Flask and jinja2 | Developed by Z-Ray Entertainment and distributed under GNU GPL 3.0+</small>
     </div>
 </div>
