--- a/webapp/templates/footer.html
+++ b/webapp/templates/footer.html
@@ -7,6 +7,9 @@
         </nav>
     </div>
     <div class="text-right">
-        <small>powered by Flask and jinja2 | Developed by Z-Ray Entertainment and distributed under GNU GPL 3.0+</small>
+        <small>powered by
+            <a href="https://palletsprojects.com/p/flask/" title="Flask Homepage" target="_blank">Flask</a> and
+            <a href="https://palletsprojects.com/p/jinja/" title="Jinja2 Homepage" target="_blank">jinja2</a> | Developed by
+            <a href="https://z-ray.de" title="Z-Ray Entertainment Homepage" target="_blank">Z-Ray Entertainment</a> and distributed under GNU GPL 3.0+</small>
     </div>
 </div>
