--- a/webapp/templates/main-nav.html
+++ b/webapp/templates/main-nav.html
@@ -1,14 +1,18 @@
-<div class="col-2">
-    <nav class="main-nav">
+<div class="main-nav">
+    <nav>
         <ul>
             <li><a href="/" title="Start page">Start</a></li>
             <li><p>|</p></li>
             <li><a href="/characters" title="Character List">Character List</a></li>
             <li><p>|</p></li>
-            <li><a>Blacklist</a></li>
+            <li><a href="#">Blacklist</a></li>
         </ul>
     </nav>
-    <nav class="text-right">
-        <a href="#">Login</a>
+    <nav>
+        <ul>
+            <li><a href="#">About</a></li>
+            <li>|</li>
+            <li><a href="#">Login</a></li>
+        </ul>
     </nav>
 </div>
