--- a/webapp/templates/footer.html
+++ b/webapp/templates/footer.html
@@ -1,15 +1,18 @@
-<div class="footer col-2">
+<div class="col-2" id="footer">
     <div>
         <nav>
-            <a href="https://gitlab.com/z-ray-entertainment/hurby/" target="_blank"><small>Gitlab</small></a> |
-            <a href="https://gitlab.com/z-ray-entertainment/hurby/issues" target="_blank"><small>Report a
-                bug</small></a>
+            <small>
+                <a href="https://gitlab.com/z-ray-entertainment/hurby/" target="_blank">Gitlab</a> |
+                <a href="https://gitlab.com/z-ray-entertainment/hurby/issues" target="_blank">Report a bug</a>
+            </small>
         </nav>
     </div>
     <div class="text-right">
-        <small>powered by
+        <small>
+            powered by
             <a href="https://palletsprojects.com/p/flask/" title="Flask Homepage" target="_blank">Flask</a> and
             <a href="https://palletsprojects.com/p/jinja/" title="Jinja2 Homepage" target="_blank">jinja2</a> | Developed by
-            <a href="https://z-ray.de" title="Z-Ray Entertainment Homepage" target="_blank">Z-Ray Entertainment</a> and distributed under GNU GPL 3.0+</small>
+            <a href="https://z-ray.de" title="Z-Ray Entertainment Homepage" target="_blank">Z-Ray Entertainment</a> License: GNU GPL 3.0+
+        </small>
     </div>
 </div>
