--- a/webapp/templates/main-nav.html
+++ b/webapp/templates/main-nav.html
@@ -1,17 +1,14 @@
-<div class="main-nav">
+<div id="main-nav">
     <nav>
         <ul>
             <li><a href="/" title="Start page">Start</a></li>
-            <li><p>|</p></li>
             <li><a href="/characters" title="Character List">Character List</a></li>
-            <li><p>|</p></li>
             <li><a href="#">Blacklist</a></li>
         </ul>
     </nav>
     <nav>
         <ul>
             <li><a href="#">About</a></li>
-            <li>|</li>
             <li><a href="#">Login</a></li>
         </ul>
     </nav>
