--- a/webapp/templates/main-nav.html
+++ b/webapp/templates/main-nav.html
@@ -1,15 +1,15 @@
 <div id="main-nav">
     <nav>
         <ul>
-            <li><a href="/" title="Start page">Start</a></li>
-            <li><a href="/characters" title="Character List">Character List</a></li>
-            <li><a href="#">Blacklist</a></li>
+            <li class="default-hover"><a href="/" title="Start page">Start</a></li>
+            <li class="default-hover"><a href="/characters" title="Character List">Character List</a></li>
+            <li class="default-hover"><a href="#">Blacklist</a></li>
         </ul>
     </nav>
     <nav>
         <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Login</a></li>
+            <li class="default-hover"><a href="#">About</a></li>
+            <li class="default-hover"><a href="#">Login</a></li>
         </ul>
     </nav>
 </div>
