#107 Introduced UAC templating

--- a/webapp/templates/restricted/character_view.html
+++ b/webapp/templates/restricted/character_view.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "abstract/restricted.html" %}
 
-{% block content %}
+{% block restricted %}
 {% if invalid %}
 <h2>Error</h2>
 <div class="character_view">
