--- a/webapp/templates/restricted/charlist.html
+++ b/webapp/templates/restricted/charlist.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "abstract/restricted.html" %}
 
-{% block content %}
+{% block restricted %}
 <h2>Characters</h2>
 
 {% if hasChars %}
