#107 Added fake loggedin var

--- a/webapp/templates/abstract/restricted.html
+++ b/webapp/templates/abstract/restricted.html
@@ -1,6 +1,6 @@
 {% extends "abstract/base.html" %}
 {% block content %}
-{% if true %}
+{% if loggedin %}
 {% block restricted %}{% endblock %}
 {% else %}
 <h2>Access denied</h2>
