--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,7 +1,19 @@
 {% extends "abstract/base.html" %}
 
 {% block content %}
-    <div class="col-1">
-        <h2>Home</h2>
+<div class="col-1">
+    <h2>Home</h2>
+</div>
+<h3>Stream Info:</h3>
+<div class="col-2">
+    <div>
+        <p><strong>Streamer:</strong> {{data.streamer_name}}</p>
+        <p><strong>Live:</strong> {{data.is_live}}</p>
+        <p><strong>Game:</strong> {{data.game_title}}</p>
     </div>
+    <div>
+        <p><strong>Title:</strong> {{data.stream_title}}</p>
+        <p><strong>Viewer:</strong> {{data.viewers}}</p>
+    </div>
+</div>
 {% endblock %}
